--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -11,7 +11,9 @@
     <div class="col-md-12">
       <h2>Items</h2>
       <ul class="list-group mb-4">
-        <!-- List the todo items here -->
+        {% for item in items %}
+          <li>{{item.title}}</li>
+        {% endfor %}
       </ul>
     </div>
   </div>
