--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -10,6 +10,14 @@
   <div class="row">
     <div class="col-md-12">
       <h2>Items</h2>
+      <form action="" method="POST" class="form-example">
+        <div class="form-example">
+          <label for="title">Title: </label>
+          <input type="text" name="title" id="title" required>
+        <div class="form-example">
+          <input type="submit" value="Submit!">
+        </div>
+      </form>
       <ul class="list-group mb-4">
         {% for item in items %}
           <li>{{item.title}}</li>
