--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -11,12 +11,11 @@
     <div class="col-md-12">
       <h2>Items</h2>
       <form action="" method="POST" class="form-example">
-        <div class="form-example">
-          <label for="title">Title: </label>
-          <input type="text" name="title" id="title" required>
-        <div class="form-example">
-          <input type="submit" value="Submit!">
+        <div class="form-group">
+          <label for="title">Title</label>
+           <input type="text" name="title" id="title" required>
         </div>
+        <button type="submit" class="btn btn-success">Submit</button>
       </form>
       <ul class="list-group mb-4">
         {% for item in items %}
