--- a/todo_app/templates/layout.html
+++ b/todo_app/templates/layout.html
@@ -9,7 +9,7 @@
     <title>{% block title %}To-Do App{% endblock %}</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+    <nav class="navbar navbar-expand-md navbar-dark bg-info mb-4">
       <a class="navbar-brand" href="/">To-Do App</a>
     </nav>
 
